kube-doomers.yaml
# -- deploy
apiVersion: apps/v1
kind: Deployment
metadata:
    name: doomers-server-v1
    namespace: doomers
spec:
    selector:
        matchLabels:
            app: doomers-server
            version: v1
    replicas: 1
    template:
        metadata:
            labels:
                app: doomers-server
                version: v1
        spec:
            containers:
                - name: game
                  image: registry.digitalocean.com/dd-game-server/doomer-server:0.1.0
                  ports:
                      - containerPort: 3000
                  imagePullPolicy: Always
                  # env:
                  #   - name: PRIVATE_KEY
                  #     valueFrom:
                  #       secretKeyRef:
                  #         name: pkey
                  #         key: pkey
---
apiVersion: v1
kind: Service
metadata:
    name: doomers-server
    namespace: doomers
    labels:
        app: doomers-server
spec:
    ports:
        - port: 3000
          protocol: TCP
    selector:
        app: doomers-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: doomers-ingress
    namespace: doomers
    annotations:
        kubernetes.io/ingress.class: nginx
spec:
    rules:
        - host: '*.doomers.wtf'
          http:
              paths:
                  - pathType: Prefix
                    path: '/'
                    backend:
                        service:
                            name: doomers-server
                            port:
                                number: 3000
        - host: 'doomers.wtf'
          http:
              paths:
                  - pathType: Prefix
                    path: '/'
                    backend:
                        service:
                            name: doomers-server
                            port:
                                number: 3000
